freesia/k8s/apps/asf/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asf

spec:
  replicas: 1
  selector:
    matchLabels:
      app: asf
  template:
    metadata:
      labels:
        app: asf
    spec:
      restartPolicy: Always
      containers:
      - name: archisteamfarm
        image: justarchi/archisteamfarm:5.4.4.5
        ports:
        - name: http
          containerPort: 1242
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: archisteamfarm-config
